gcp/vpc.tf
resource "google_compute_network" "my_vpc" {
  project                         = var.project
  name                            = "my-vpc"
  routing_mode                    = "REGIONAL"
  auto_create_subnetworks         = false
}
